v0.10.2, <RELEASE DATE HERE>:

* Visual Studio:
	* If VisualStudioProject::codeFolders is empty when the solution is being created then Builder will go through each BuildConfig that project knows about and take a superset of all of those folders instead, if it can, instead of erroring.
	* If VisualStudioProject::fileExtensions is empty when the solution is being created then Builder will use some default file extensions instead of erroring.
		* Those defaults are currently: c, cpp, cc, cxx, h, hpp, inl

----------------------------------------------------------------

v0.10.1, 27/02/2026:

* Fixed stdout of subprocesses being mangled.
* MSVC:
	* Fixed compiler and linker args not showing.
	* Fixed compiler path and version not being set if anything other than "cl" was specified.
* Visual Studio:
	* Fixed execution time not showing when Visual Studio solution generation was requested.
	* The intermediate folder is no longer created inside the same folder as your Visual Studio solution and instead now actually goes to the binary folder that the user specifies.

----------------------------------------------------------------

v0.10.0, 19/02/2026:

* All snake_case coding conventions have been completely dropped.
	* Functions are now PascalCase.  For example: set_builder_options is now SetBuilderOptions.
	* Variables are now camelCase.  For example: generate_solution is now generateSolution.
	* This change was made because the internal codebase conventions were different from the public API and it was annoying me.
* Added support for generating compilation database JSON files (thanks @eddyowen!).
	* You can generate this via BuilderOptions::generateCompilationDatabase.
	* For editors that support this (CLion, Visual Studio Code, and others), this allows projects using Builder to have syntax highlighting and IntelliSense support without any additional setup.
* Added BuilderOptions::forceRebuild.